--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 build/Desktop_Qt_5_15_2_GCC_64bit-Debug/
+
+build/Desktop_Qt_6_7_3_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/
+
+build/Desktop_Qt_6_7_3_GCC_64bit-Debug/.qtc_clangd/
